--- a/easyBook/SchedulePage/ClauseCell.xib
+++ b/easyBook/SchedulePage/ClauseCell.xib
@@ -13,15 +13,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ClauseCell" rowHeight="308" id="KGk-i7-Jjw" customClass="ClauseCell" customModule="easyBook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="449" height="176"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ClauseCell" rowHeight="458" id="KGk-i7-Jjw" customClass="ClauseCell" customModule="easyBook" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="446" height="270"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="449" height="175.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="446" height="269.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="76w-Ea-rym">
+                        <rect key="frame" x="20" y="0.0" width="406" height="56"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人数限制" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5V-HX-RBo">
+                                <rect key="frame" x="0.0" y="18" width="69.5" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <color key="textColor" name="themeGray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CO0-bg-idP">
+                                <rect key="frame" x="169.5" y="17.5" width="236.5" height="21"/>
+                                <color key="tintColor" name="themeColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="CO0-bg-idP" firstAttribute="leading" secondItem="R5V-HX-RBo" secondAttribute="trailing" constant="100" id="9xk-wp-UxR"/>
+                            <constraint firstAttribute="height" constant="56" id="M9b-ef-Jns"/>
+                            <constraint firstAttribute="trailing" secondItem="CO0-bg-idP" secondAttribute="trailing" id="xBe-Ke-MYP"/>
+                        </constraints>
+                    </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5eY-sp-0lT">
+                        <rect key="frame" x="20" y="55.5" width="426" height="0.5"/>
+                        <color key="backgroundColor" name="themeSeperatorColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="XSx-Ls-2wX"/>
+                        </constraints>
+                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nhb-0C-wXa">
-                        <rect key="frame" x="20" y="0.0" width="409" height="56"/>
+                        <rect key="frame" x="20" y="55.5" width="406" height="56"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间段" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMC-F4-KQV">
                                 <rect key="frame" x="0.0" y="18" width="52" height="20.5"/>
@@ -30,7 +60,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="LXU-Z3-Gsx">
-                                <rect key="frame" x="306" y="18" width="103" height="20.5"/>
+                                <rect key="frame" x="303" y="18" width="103" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYO-om-mSW">
                                         <rect key="frame" x="0.0" y="0.0" width="43" height="20.5"/>
@@ -58,21 +88,21 @@
                         </constraints>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFT-OG-5Cp">
-                        <rect key="frame" x="20" y="55.5" width="429" height="0.5"/>
+                        <rect key="frame" x="20" y="111" width="426" height="0.5"/>
                         <color key="backgroundColor" name="themeSeperatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="jjx-43-fmO"/>
                         </constraints>
                     </view>
                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="30" translatesAutoresizingMaskIntoConstraints="NO" id="vBG-hW-fSk">
-                        <rect key="frame" x="0.0" y="55.5" width="224.5" height="120"/>
+                        <rect key="frame" x="0.0" y="111" width="223" height="158.5"/>
                         <date key="date" timeIntervalSinceReferenceDate="573408000.22730696">
                             <!--2019-03-04 16:00:00 +0000-->
                         </date>
                         <locale key="locale" localeIdentifier="zh_CN"/>
                     </datePicker>
                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="30" translatesAutoresizingMaskIntoConstraints="NO" id="TRd-MU-fKd">
-                        <rect key="frame" x="224.5" y="55.5" width="224.5" height="120"/>
+                        <rect key="frame" x="223" y="111" width="223" height="158.5"/>
                         <date key="date" timeIntervalSinceReferenceDate="573476863.22730696">
                             <!--2019-03-05 11:07:43 +0000-->
                         </date>
@@ -83,16 +113,22 @@
                     <constraint firstAttribute="trailing" secondItem="TRd-MU-fKd" secondAttribute="trailing" id="2Ng-RT-5wt"/>
                     <constraint firstItem="TRd-MU-fKd" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.5" id="7Hv-Ec-mKm"/>
                     <constraint firstAttribute="trailing" secondItem="nhb-0C-wXa" secondAttribute="trailing" constant="20" id="7VV-Ob-Qgu"/>
-                    <constraint firstItem="nhb-0C-wXa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7hA-t5-HpH"/>
                     <constraint firstItem="tFT-OG-5Cp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="AuB-Bk-bKC"/>
+                    <constraint firstItem="76w-Ea-rym" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="BDi-Rx-y1z"/>
+                    <constraint firstItem="5eY-sp-0lT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="D9U-PT-rjv"/>
                     <constraint firstItem="vBG-hW-fSk" firstAttribute="top" secondItem="tFT-OG-5Cp" secondAttribute="top" id="DFW-Yu-YCH"/>
                     <constraint firstAttribute="bottom" secondItem="vBG-hW-fSk" secondAttribute="bottom" id="FAu-jB-xaJ"/>
+                    <constraint firstAttribute="trailing" secondItem="76w-Ea-rym" secondAttribute="trailing" constant="20" id="JbW-Ig-ylf"/>
+                    <constraint firstItem="76w-Ea-rym" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="JhC-su-yD9"/>
                     <constraint firstItem="vBG-hW-fSk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KE5-Qi-JOd"/>
                     <constraint firstItem="TRd-MU-fKd" firstAttribute="top" secondItem="tFT-OG-5Cp" secondAttribute="top" id="Knm-Rc-1St"/>
                     <constraint firstItem="vBG-hW-fSk" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.5" id="Pw0-mg-3wT"/>
                     <constraint firstAttribute="bottom" secondItem="TRd-MU-fKd" secondAttribute="bottom" id="XRa-sL-Bq9"/>
                     <constraint firstItem="tFT-OG-5Cp" firstAttribute="bottom" secondItem="nhb-0C-wXa" secondAttribute="bottom" id="hrt-X2-Beb"/>
                     <constraint firstAttribute="trailing" secondItem="tFT-OG-5Cp" secondAttribute="trailing" id="jDw-sp-FYm"/>
+                    <constraint firstItem="nhb-0C-wXa" firstAttribute="top" secondItem="5eY-sp-0lT" secondAttribute="top" id="luE-c3-WsX"/>
+                    <constraint firstItem="5eY-sp-0lT" firstAttribute="bottom" secondItem="76w-Ea-rym" secondAttribute="bottom" id="nXI-BB-1Wa"/>
+                    <constraint firstAttribute="trailing" secondItem="5eY-sp-0lT" secondAttribute="trailing" id="p7b-5U-Uyb"/>
                     <constraint firstItem="nhb-0C-wXa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="pFw-eR-o2e"/>
                 </constraints>
             </tableViewCellContentView>
@@ -100,14 +136,18 @@
             <connections>
                 <outlet property="endTimeLabel" destination="NIa-WS-MSQ" id="o1R-6t-vzz"/>
                 <outlet property="endTimePicker" destination="TRd-MU-fKd" id="mC5-fF-ZTG"/>
+                <outlet property="maxAmountTextField" destination="CO0-bg-idP" id="et6-Zs-kVR"/>
                 <outlet property="startTimeLabel" destination="WYO-om-mSW" id="Pnd-VM-lhH"/>
                 <outlet property="startTimePicker" destination="vBG-hW-fSk" id="g64-9p-lUo"/>
                 <outlet property="timePeriodLabel" destination="TMC-F4-KQV" id="GfH-co-4Kq"/>
             </connections>
-            <point key="canvasLocation" x="-7.2000000000000002" y="58.47076461769116"/>
+            <point key="canvasLocation" x="-9.5999999999999996" y="16.191904047976013"/>
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="themeColor">
+            <color red="0.14901960784313725" green="0.30980392156862746" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="themeGray">
             <color red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
