--- a/easyBook/Base.lproj/Main.storyboard
+++ b/easyBook/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vMT-Pf-M6w">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vMT-Pf-M6w">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -237,6 +237,30 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xne-tL-dBG" id="RSp-YA-x3k">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="ZHw-gc-LdS">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="J1W-52-jxa">
+                                        <rect key="frame" x="0.0" y="483.5" width="375" height="56"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="J1W-52-jxa" id="nOr-f1-vuf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取消预约" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfR-X0-oqc">
+                                                    <rect key="frame" x="152.5" y="17.5" width="70" height="21"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mfR-X0-oqc" firstAttribute="centerY" secondItem="nOr-f1-vuf" secondAttribute="centerY" id="Ah4-x2-1V9"/>
+                                                <constraint firstItem="mfR-X0-oqc" firstAttribute="centerX" secondItem="nOr-f1-vuf" secondAttribute="centerX" id="MJ6-jU-BIQ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -1676,7 +1700,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OCRTransTopBarBg_375x95_" translatesAutoresizingMaskIntoConstraints="NO" id="Oz6-iX-ayM">
-                                <rect key="frame" x="0.0" y="-20" width="375" height="95"/>
+                                <rect key="frame" x="0.0" y="-20" width="375" height="95.5"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OCRTransBottomBarBg_375x160_" translatesAutoresizingMaskIntoConstraints="NO" id="25m-wE-tPC">
                                 <rect key="frame" x="0.0" y="120" width="375" height="160"/>
@@ -1892,7 +1916,7 @@
                                     </connections>
                                 </imageView>
                                 <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OCRTransTopBarBg_375x95_" translatesAutoresizingMaskIntoConstraints="NO" id="Md0-rH-Mbd">
-                                    <rect key="frame" x="0.0" y="-20" width="375" height="95"/>
+                                    <rect key="frame" x="0.0" y="-20" width="375" height="95.5"/>
                                     <connections>
                                         <outletCollection property="gestureRecognizers" destination="nah-wd-ngg" appends="YES" id="QaG-BD-k4D"/>
                                     </connections>
@@ -5185,7 +5209,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OCRTransTopBarBg_375x95_" translatesAutoresizingMaskIntoConstraints="NO" id="M8A-eH-Gjk">
-                                <rect key="frame" x="0.0" y="-20" width="375" height="95"/>
+                                <rect key="frame" x="0.0" y="-20" width="375" height="95.5"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OCRTransBottomBarBg_375x160_" translatesAutoresizingMaskIntoConstraints="NO" id="Vsu-sU-ewm">
                                 <rect key="frame" x="0.0" y="120" width="375" height="160"/>
@@ -5683,7 +5707,7 @@
         <image name="female_15x15_" width="15" height="15"/>
         <image name="group_icon_14x13_" width="14" height="13"/>
         <image name="location_icon_14x13_" width="14" height="13"/>
-        <image name="lock_icon_16x24_" width="32" height="47.342464447021484"/>
+        <image name="lock_icon_16x24_" width="16" height="24"/>
         <image name="login_bg_375x250_" width="375" height="250"/>
         <image name="logo_about_64x64_" width="341.5" height="341.5"/>
         <image name="message_25x25_" width="25" height="25"/>
